LuxStudio/depl/overlays/saturn/patch-deployment-luxstudio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luxstudio-deployment
spec:
  template:
    spec:
      containers:
        - name: luxstudio-container
          image: luxoria/luxstudio
          imagePullPolicy: Always
